# LocalFit-Ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP-RUNBOOK.html  SETUP-RUNBOOK.md  config.example.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  review.md
.claude/commands/_archive/v1/: phase-1a.md  phase-1b.md  phase-2a.md  phase-2b.md  phase-2c.md  phase-3.md  phase-4a.md  phase-4b.md  phase-5.md  phase-6.md  review.md
app/: config.py  main.py  messages.py
app/adapters/llm/: __init__.py  ollama.py  ollama_client.py  protocol.py
app/adapters/stt/: __init__.py  faster_whisper_client.py  protocol.py  vad.py  whisper.py
app/adapters/tts/: __init__.py  melo_client.py  protocol.py  qwen3.py  qwen3_client.py
app/api/: admin.py  calendar.py  health.py  onboarding.py  routine.py  session.py  ws_coach.py  ws_voice.py
app/core/: calendar_metrics.py  coach_context.py  coach_response.py  confirm_slot.py  counting.py  counting_cues.py  intent.py  onboarding.py  orchestrator.py  safety.py  state_machine.py  text_sanitize.py
app/db/: engine.py  models.py  repositories.py
app/pipecat_services/: coach_context_adapter.py  counting_manager.py  frames.py  json_frame_serializer.py  melo_tts_service.py  mock_llm_service.py  mock_stt_service.py  mock_tts_service.py  ollama_service.py  pipeline_builder.py  qwen3_tts_service.py  service_factory.py  whisper_service.py
app/pipecat_services/processors/: action_dispatcher.py  confirm_rule.py  counting_inject.py  safety_guard.py  ui_control.py  ui_text_broadcast.py
app/prompts/: coaching.py  safety.py
app/utils/: latency.py  logging.py  timer.py
docs/: prd-v3.2.md  prd-v4.md  qa-checklist-v4.md  qa-checklist.md  testing-strategy.md
docs/_archive/v3/: faster-qwen3-tts.md
docs/agent-tasks/: README.md  phase-0-poc.md  phase-1-base-prep.md  phase-1b-infra.md  phase-2-pipecat-shell.md  phase-2a-llm-adapter.md  phase-2c-tts-adapter.md  phase-3-tts.md  phase-4-stt-vad.md  phase-4a-orchestrator.md  phase-5-active-coach.md  phase-5-ui.md  phase-6-counting.md  phase-7-ui-validation.md  phase-8-workout-calendar.md
docs/agent-tasks/_archive/v1/: phase-1a-scaffold.md  (+4 more)
docs/agent-tasks/v4/: phase-0-tauri-spike-result.md  phase-0-tauri-spike.md
docs/architecture/adr/: 001-main-language.md  002-mvp-topology.md  003-llm-runtime.md  004-llm-models.md  005-stt.md  006-tts.md  007-db-orm.md  007-vad-turn-detection.md  008-backend-framework.md  008-db-orm.md  009-backend-transport.md  009-ui-framework.md  010-adapter-interfaces.md  010-ui-framework.md  011-voice-pipeline-pipecat.md  012-domain-adapter-contract.md  013-active-coach.md  013-model-download.md  014-counting-engine.md  014-process-lifecycle.md  015-model-concurrency.md  016-model-download.md  017-package-manager.md  018-logging-observability.md  019-test-strategy.md  020-workout-calendar.md  021-v4-entry-scope-migration.md  022-google-calendar.md  023-condition-tracking.md  024-workout-plan.md  025-persistent-memory.md  026-exercise-catalog.md  027-active-notification-scheduler.md  028-first-session-assessment.md  029-llm-model-qwen35-9b.md  030-model-lifecycle-on-demand.md  031-ui-platform-tauri.md  README.md
docs/conventions/: code-review-checklist.md  coding-style.md  testing.md
docs/future/: faster-qwen3-tts.md  v4-vision.md
docs/retrospectives/: 2026-06-07-v3-lessons.md
scripts/: bench_tts_first_chunk.py  dev.bat  spike_vram_lifecycle.py  tts_compare.py
tests/: test_calendar_api.py  test_calendar_metrics.py  test_coach_context_calendar.py  test_ws_voice_shell.py
tests/integration/: test_active_coach_llm.py  test_active_coach_pipeline.py  test_api.py  test_counting_scenario.py  test_faster_whisper_client.py  test_faster_whisper_resample.py  test_llm_ollama.py  test_orchestrator.py  test_roundtrip_4mode.py  test_stt_whisper.py  test_tts.py  test_ws_voice_tts.py
tests/unit/: test_action_dispatcher.py  test_action_dispatcher_counting.py  test_coach_context.py  test_coach_response.py  test_config.py  test_confirm_rule.py  test_counting.py  test_counting_cues.py  test_counting_inject.py  test_cue_selection.py  test_db_models.py  test_intent.py  test_interrupt_pause.py  test_json_serializer.py  test_latency.py  test_melo_client.py  test_melo_service.py  test_onboarding.py  test_qwen3_client.py  test_qwen3_service.py  test_safety.py  test_safety_processor.py  test_set_complete_followup.py  test_state_machine.py  test_structured_ollama.py  test_stt_decode.py  test_text_sanitize.py  test_whisper_service.py  test_ws_voice_stt.py
ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/public/: manifest.webmanifest  sw.js
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
ui/src/api/: calendar.ts  client.ts  types.ts  ws.test.ts  ws.ts
ui/src/components/: CalendarHeatmap.tsx  ChatPanel.tsx  CountingDisplay.tsx  DayDetailModal.tsx  ModeSwitch.tsx  QuickButtons.tsx
ui/src/hooks/: useAudio.ts  useWakeLock.ts
ui/src/screens/: Calendar.tsx  Onboarding.tsx  SessionLive.tsx  Settings.tsx
ui/src/state/: session.test.ts  session.tsx
ui/src/test/: setup.ts
(+7 files in other folders)
