[project]
name = "localfit-ai"
version = "0.1.0"
description = "로컬 LLM 기반 개인 AI 피트니스 코치"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "loguru>=0.7.3",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.3",
]
stt = [
    "faster-whisper>=1.0",
    "torch>=2.3",
    "torchaudio>=2.3",
]
tts = [
    "kokoro>=0.9",
]
vad = [
    "silero-vad>=5.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: GPU/CUDA 필요 테스트 (deselect with '-m not gpu')",
    "integration: 외부 서비스(Ollama 등) 필요 테스트",
    "ollama: Ollama 서버 필요 테스트 (deselect with '-m not ollama')",
]
