[project]
name = "localfit-ai"
version = "0.1.0"
description = "로컬 LLM 기반 개인 AI 피트니스 코치"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.27",
    "loguru>=0.7",
    "ollama>=0.4",
    "pipecat-ai[silero,whisper]>=1.3.0",
    "instructor>=1.6",
    "openai>=1.50",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "faster-whisper>=1.2",
    "transformers>=4.45",
    "librosa>=0.10",
    "soundfile>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: GPU/CUDA 필요 테스트 (deselect with '-m not gpu')",
    "integration: 외부 서비스(Ollama 등) 필요 테스트",
    "ollama: Ollama 서버 필요 테스트 (deselect with '-m not ollama')",
]

# RTX 5090 (Blackwell, sm_120) needs a CUDA 12.8+ torch build (ADR-016: Windows native).
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
